--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
+  "name": "ts-function-override",
+  "version": "1.0.7",
+  "description": "Tool for easy method overriding",
+  "private": false,
+  "keywords": [
+    "override",
+    "overriding",
+    "function",
+    "override function"
+  ],
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "author": "Alexey Medvedev <imyevolove@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/imyevolove/ts-function-override"
+  },
+  "license": "MIT",
   "scripts": {
-    "test": "npx ts-node test/test.ts"
+    "test": "npx ts-node test/test.ts",
+    "prepublish": "tsc --build --clean && tsc"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/tape": "^4.13.0",
-    "tape": "^5.0.1"
+    "typescript": "^4.0.3"
   },
-  "private": true
+  "files": [
+    "dist/**"
+  ]
 }
