--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,24 @@
 {
-    "exclude": ["__tests__/**/*-test.ts"],
     "compilerOptions": {
-        "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
-        "lib": ["dom", "esnext"],
         "moduleResolution": "node",
-        "target": "es5",
-        "noEmit": true,
+        "noEmit": false,
         "skipLibCheck": true,
         "resolveJsonModule": true,
-        "strict": true
-    }
+        "rootDir": "src",
+        "sourceMap": true,
+        "target": "es5",
+        "module": "commonjs",
+        "lib": ["esnext"],
+        "declaration": true,
+        "outDir": "dist",
+        "strict": true,
+        "esModuleInterop": true,
+    },
+    "exclude": [
+        "test",
+        "dest",
+        "node_modules",
+        "src/**/*.spec.ts"
+    ]
 }
